# solutis_procurement

./: .env.example  .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  Pipfile  README.md  db.sqlite3  docker-compose.yaml  pyproject.toml  requirements.txt  test_validation.py
.github/workflows/: pylint.yml  tag-on-push.yml
config/: settings.py  urls.py
src/api/v1/: api.py  auth.py  exceptions.py  pagination.py  request.py
src/procurement/: apps.py  views.py
src/procurement/models/: contract.py
src/shared/: apps.py  authentication.py  backends.py  middleware.py  mixins.py  models.py  pagination.py  schemas.py  serializers.py  validation.py  views.py
src/shared/migrations/: 0001_initial.py  0002_alter_address_postal_code.py  0003_alter_address_options_alter_contact_options_and_more.py  0004_alter_address_city_alter_address_number_and_more.py  0005_alter_address_postal_code.py  0006_contact_name.py
src/shared/tests/: __init__.py  test_authentication.py  test_models.py  test_serializers.py  test_views.py
src/supplier/: apps.py  enums.py  filters.py  signals.py
src/supplier/filters/: evaluation.py
src/supplier/fixtures/: approval_steps.json  attachemnt_risk_level.json  attachment_types.json  business_sectors.json  category.json  classification.json  company_sizes.json  customer_types.json  icms_taxpayers.json  income_types.json  iss_regimes.json  iss_withholdings.json  payer_types.json  payment_methods.json  pendency__type.json  (+8 more)
src/sync/: apps.py  dto.py  mapper.py  queries.py  urls.py  views.py
src/utils/: parse.py  upload.py
(+131 files in other folders)
